Add the missing callback to client for CheckResourceUrl.

Also updated the test to check for the matching full hash in that case.

BUG=679906

Review-Url: https://codereview.chromium.org/2622063002
Cr-Commit-Position: refs/heads/master@{#443096}

Former-commit-id: ff1a6112240cb285eab6a15a62419c2359b84ff5